Updated checkbox labels to have correct text alignment. More margin between the fields. Some styling.

--- a/src/resources/sass/elements/_checkboxes.scss
+++ b/src/resources/sass/elements/_checkboxes.scss
@@ -1,5 +1,6 @@
 .checkbox label {
 	padding-left: 35px;
+	min-height: 30px;
 }
 
 .checkbox input[type="checkbox"] {
