--- a/src/resources/sass/pages/_register.scss
+++ b/src/resources/sass/pages/_register.scss
@@ -1,10 +1,25 @@
+.page-register {
+	height: 100%;
+}
+
+body {
+	height: 100%;
+}
+
+.checkbox label {
+	line-height: 30px;
+	vertical-align: middle;
+}
+
 .register-content {
 	padding-bottom: 50px;
+	background-color: #F8F9FB;
+	height: 100%;
 	
 	h2 {
 		font-size: 20px;
 		line-height: 30px;
-		font-weight: 400;
+		font-weight: bold;
 	}
 	
 	label {
@@ -118,6 +133,10 @@
 		margin-right: 20px; 
 		width: 20px;
 		height: 20px;
+	}
+	
+	#chooseLoginWayLabel {
+		font-weight: bold;
 	}
 	
 	.input-icon {
